Better tmux.conf.

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -25,5 +25,7 @@ set -g window-status-current-fg red
 
 set-option -g -q mouse on
 
-set -g status-interval 5
+set -g status-interval 1
+
+set -g status-right '%d.%m.%y %H:%M:%S'
 
