--- a/.tmux.conf
+++ b/.tmux.conf
@@ -17,7 +17,7 @@ bind-key -n M-Left previous-window
 
 set-window-option -g xterm-keys on
 
-set -g default-terminal "screen-256color"
+set -g default-terminal "xterm-256color"
 
 set -g status-bg black
 set -g status-fg colour003
@@ -27,5 +27,4 @@ set-option -g -q mouse on
 
 set -g status-interval 1
 
-set -g status-right '%d.%m.%y %H:%M:%S'
-
+set -g status-right '#(hostname -s) %d.%m.%y %H:%M:%S'
