--- a/.tmux.conf
+++ b/.tmux.conf
@@ -21,7 +21,7 @@ set -g default-terminal "xterm-256color"
 
 set -g status-bg black
 set -g status-fg colour003
-set -g window-status-current-fg red
+set -g window-status-current-style fg=red
 
 set-option -g -q mouse on
 
